# tuskar

./: .gitignore  .gitreview  .travis.yml  CONTRIBUTING.rst  INSTALL.rst  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings
doc/source/: CONTRIBUTING.rst  INSTALL.rst  conf.py  contributing.rst  index.rst  install.rst  recommended-reading.rst  resource-class-demo-script.rst
docs/: INSTALL.rst  debugging-with-ipython.rst  demo-data-script.rst  index.rst  recommended-reading.rst  resource-class-demo-script.rst
docs/api/: api.md  curl.rst
docs/heat/: using-heat-api-with-boto.rst
etc/tuskar/: boto.conf  nova_overcloud_config.yaml  nova_undercloud_config.yml  policy.json  tuskar.conf.sample
ironic/common/: exception.py  utils.py
ironic/db/: api.py
ironic/manager/: manager.py
ironic/tests/: test_utils.py
tools/: flakes.py  initial_data.py  install_venv_common.py  patch_tox_venv.py  sample_data.py  with_venv.sh
tools/conf/: generate_sample.sh
tools/config/: check_uptodate.sh  generate_sample.sh  oslo.config.generator.rc
tuskar/: __init__.py  netconf.py  version.py
tuskar/api/: __init__.py  acl.py  app.py  config.py  hooks.py  renderers.py
tuskar/cmd/: __init__.py  api.py  dbsync.py  delete_roles.py  fetch_tripleo_heat_templates.py  load_role.py  load_roles.py  load_seed.py  load_templates.py  manager.py  template_import.py
tuskar/common/: config.py  context.py  crypt.py  exception.py  paths.py  policy.py  rpc.py  service.py  utils.py  utils.py.orig
(+218 files in other folders)
