[metadata]
name = tuskar
version = 2013.2
summary = An OpenStack Management Service
description-file =
    README.rst
author = Mark McLoughlin
author-email = markmc@redhat.com
home-page = http://git.openstack.org/cgit/openstack/tuskar
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    tuskar

[entry_points]
console_scripts =
    tuskar-api = tuskar.cmd.api:main
    tuskar-dbsync = tuskar.cmd.dbsync:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = tuskar/locale
domain = tuskar

[update_catalog]
domain = tuskar
output_dir = tuskar/locale
input_file = tuskar/locale/tuskar.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tuskar/locale/tuskar.pot
